--- a/ex025/form004.html
+++ b/ex025/form004.html
@@ -7,5 +7,32 @@
 </head>
 <body>
     <h1> Formulario de Telefone e Email</h1>
+<form action="cadastro.php" method="get">
+    <fieldset>
+        <legend>Dados Pessoais</legend>
+        <p>
+            <label for="inome">Nome</label>
+            <input type="text" name="nome" id="inome" maxlength="20" minlength="5" required>
+        </p>
+        <p>
+            <label for="iemail">E-mail</label>
+            <input type="email" name="email" id="iemail" required>
+        </p>
+        <p>
+            <label for="itel">Telefone</label>
+            <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4}$" required placeholder="(xx)xxxx-xxxx">
+        </p>
+        
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
+
+        <!-- 
+            A tag pattern em HTML é usada para especificar uma expressão regular que valida o valor inserido em um campo de entrada (regEx). Isso é útil quando você deseja garantir que o usuário insira dados no formato correto.
+        -->
+    </fieldset>
+</form>
+
 </body>
 </html>
