--- a/ex025/form009.html
+++ b/ex025/form009.html
@@ -11,7 +11,8 @@
 
     <p>
         <label for="inum">Número</label>
-        <input type="range" name="num" id="inum" min="0" max="10" value="5">
+        <input type="range" name="num" id="inum" min="0" max="10" value="5" oninput="ival.innerHTML = Number(inum.value)">
+        <output id="ival" >5</output>
     </p>  
 
     <p>
