--- a/ex026/mq005/index.html
+++ b/ex026/mq005/index.html
@@ -6,6 +6,7 @@
     <title>Site - Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 
     <!-- 
         Estrutura site:
@@ -15,7 +16,7 @@
         dentro do main - article
     -->
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
@@ -45,6 +46,14 @@
             </article>
         </main>
         <script>
+            function mudouTamanho() {
+                if (window.innerWidth >= 768) {
+                    itens.style.display = 'block'
+                } else {
+                    itens.style.display = 'none'
+                }
+            }
+
             function clickMenu(){
                 if (itens.style.display == 'block') {
                     itens.style.display = 'none'
