formatação do projeto

--- a/Desafios/Desafio mod 4 - 26/projetoLogin.html
+++ b/Desafios/Desafio mod 4 - 26/projetoLogin.html
@@ -33,7 +33,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html#">Esqueci a senha<i class="material-symbols-outlined">mail</i>
+                    <a class="botao" href="esqueci.html#">Esqueci a senha<i class="material-symbols-outlined">mail</i>
                 </form>
             </div>
         </section>
